@@ -530,9 +530,9 @@
 
         <edition name="Deepin" description="Deepin Desktop">
            <packages>
-               <pkgname>deepin-account-faces</pkgname>
                <pkgname>adwaita-icon-theme</pkgname>
                <pkgname>brasero</pkgname>
+               <pkgname>deepin-account-faces</pkgname>
                <pkgname>deepin-api</pkgname>
                <pkgname>deepin-artwork-themes</pkgname>
                <pkgname>deepin-calendar</pkgname>
@@ -563,11 +563,11 @@
                <pkgname>deepin-cogl</pkgname>
                <pkgname>deepin-movie</pkgname>
                <pkgname>deepin-mutter</pkgname>
+               <pkgname>deepin-system-monitor</pkgname>
                <pkgname>gedit</pkgname>
                <pkgname>gnome-calculator</pkgname>
                <pkgname>gnome-disk-utility</pkgname>
                <pkgname>gnome-software</pkgname>
-               <pkgname>gnome-system-monitor</pkgname>
                <pkgname nm='true' name='NetworkManager'>network-manager-applet</pkgname>
                <pkgname>noto-fonts</pkgname>
                <pkgname>noto-fonts-cjk</pkgname>
@@ -580,7 +580,7 @@
 
     <!-- User desired features -->
     <features>
-        <feature name="6dots">
+        <feature name="a11y">
             <pkgname>alsa-utils</pkgname>
             <pkgname>bluez</pkgname>
             <pkgname>bluez-libs</pkgname>
